# AI-Digital-Human

./: .env.default  .gitignore  LICENSE  Makefile  PROVIDERS.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  turbo.json  wen.pmparker.net.nginx.conf
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: bd824b9c0dd2_initial_schema.py  cc6fa645e728_initial_schema.py
apps/api/app/: dependencies.py  main.py  startup.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/mcp/: __init__.py  registry.py  server.py  tools.py
apps/api/app/models/: __init__.py  database.py  schemas.py
apps/api/app/routers/: admin.py  auth.py  camera.py  chat.py  faces.py  knowledge.py  multimodal.py  settings.py
apps/api/app/services/: chat_service.py  face_service.py  graph_service.py  llm_service.py  memory_service.py  multimodal_service.py  stt_service.py  vision_service.py
apps/api/tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_settings.py
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.ts  vitest.config.ts
apps/web/public/: robots.txt  sitemap.xml
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/api-docs/: page.tsx
apps/web/src/hooks/: useCamera.ts  useChat.ts  useGraphData.ts
apps/web/src/lib/: adminApi.ts  adminAuth.ts  api.ts  auth.ts  cameraApi.ts  graph.ts
nginx/: nginx.conf
(+29 files in other folders)
